--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,8 @@
     "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
-    "vue-markdown": "^2.2.4"
+    "vue-markdown": "^2.2.4",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
