--- a/ui/package.json
+++ b/ui/package.json
@@ -11,10 +11,10 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.3.0-beta.4",
+    "marked": "^4.0.9",
     "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
-    "vue-markdown": "^2.2.4",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
